@@ -4,6 +4,11 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 2.1-14 (opened March 9, 2012)
 
+  * clamtest: wrongly used frequencies instead of the counts
+  when calculating sample coverage to test x < coverage.limit. 
+  No detectable differences were produced when rerunning 
+  examples from Chazdon et al. 2011 and vegan help page.
+
 	* Opened a new version with the CRAN release of vegan 2.0-3 on
 	March 3, 2012.
 
